force-app/main/default/objects/Store_Product__c/fields/Is_External_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_External_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is External Product</label>
    <type>Checkbox</type>
</CustomField>