force-app/main/default/objects/Store_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Stocked_Product__c</referenceTo>
    <relationshipLabel>Store Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>