force-app/main/default/objects/Store_Product__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Store Products</relationshipLabel>
    <relationshipName>Store_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>